# resume-maker-ai-agent

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml
.devcontainer/: devcontainer.json  postCreateCommand.sh
.github/workflows/: hugging_face-deploy.yml  test-check-build.yml
.streamlit/: config.toml
docs/: index.md  modules.md
notebooks/: trails.ipynb
resume_maker_ai_agent/: __main__.py  app.py  app2.py  crew.py
resume_maker_ai_agent/config/: agents.yaml  tasks.yaml
resume_maker_ai_agent/models/: response_models.py
resume_maker_ai_agent/services/: app_service.py  web_scarapper_service.py
resume_maker_ai_agent/tools/: custom_tool.py
